1.5.4:
- Add long press shortcut to calendar buttons moving one year forward/backward
- Improve calculation of meditation streak window (streak buffer was not being applied consistently)
- Session start, length, end and message are now editable
- Fix tapping home screen widget asking to sign in to MediNET

1.5.3:
- Fix tapping widget always causing MediNET sign in dialog to be shown
- Potentially fix

1.5.3:
- Fix interval sounds not reliably playing
- Fix timer not displaying when returning to the app while paused
- Add 'Widget color' preference

1.5.2:
- Potentially fix sounds not reliably playing
- Add 'Streak resets at' preference

1.5.1:
- Fix crash when upgrading full screen preference

1.5.0:
- Fix setting device to vibrate/silent on Android 6.0+
- Split full screen preference into three options: disabled, during session and always
- Obey volume preference when playing sounds in the Settings screen
- Remove 'Turn screen off' option as it requires device administrator privileges

1.4.9:
- Fix crash when starting session on Android 8.0+

1.4.8:
- Fix custom sounds not playing
- Add Liberapay donation method

1.4.6/1.4.7:
- Add session export feature to Progress window

1.4.5:
- Fix app crash when signing in to MediNET
- Fix widget service crash

1.4.4:
- Add feature to send debug log via email

1.4.3:
- Potentially resolve a bug affecting some users where their browser is opened to sign in each time the app is opened

1.4.2:
- Updated notification icon to match app icon
- Fixed data/battery drain introduced in 1.4.1 for some users
- Fixed null alarm receiver cancel bug

1.4.1:
- Updated app icon (thanks Symbolisch)
- Changed MediNET Oauth method from Play Services to open-source library AppAuth
- Fix set to vibrate/silent feature on pre-Android 6.0 devices
- App now requires Android 4.1+ (was 4.0+)

1.4.0:
- Fix alarm icon appearing in the status bar when Daily Reminder is enabled
- Increase fidelity of the default gong sound

1.3.9: