@@ -1,0 +1,7 @@
+<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <header
+        android:fragment="sh.ftp.rocketninelabs.meditationassistant.SettingsActivity$MiscellaneousPreferenceFragment"
+        android:title="@string/miscellaneous"/>
+
+</preference-headers>
