@@ -1,0 +1,9 @@
+<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- These headers are only used pre-8.0 -->
+
+    <header
+        android:fragment="sh.ftp.rocketninelabs.meditationassistant.SettingsActivity$ReminderPreferenceFragment"
+        android:title="@string/pref_daily_reminder"/>
+
+</preference-headers>
